# lignum

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  meson.build
docs/: DB.md
schemes/: activity.puml  class.cmapx  class.puml  nohup.out  sequence.puml  usecase.puml
src/: CMakeLists.txt  a.out  meson.build  mongo.cpp  symbology-style.db  user-history.db
src/app/: Application.cpp  Application.h  CMakeLists.txt  family-tree-graphics-view.h  lignum-window.cpp  lignum-window.ui  main.cpp  meson.build  person-view.h
src/app/balancer/: balancer-preprocessor.cpp  balancer-preprocessor.h  balancer-processor.cpp  cluster.cpp  cluster.h  node-placer.h
src/app/config/: ColorManager.cpp  Config.cpp  Config.h  meson.build
src/app/family-tree/: abstract-connector.h  abstract-family-connector.h  abstract-person-item.h  family-connector.h  family-tree-builder.cpp  family-tree-builder.h  family-tree-item.cpp  family-tree-item.h  family-tree-view.cpp  family-tree-view.h  individual-item.cpp  individual-item.h  meson.build  people-connector.cpp  people-connector.h  render-manager.cpp  render-manager.h
src/app/family-tree-item/: connector.h  family-connector.cpp  family-connector.h  family-tree-builder.cpp  family-tree-item.cpp  family-tree-item.h  individual-item.cpp  individual-item.h
src/app/family-tree-item/balancer/: balancer-preprocessor.cpp  balancer-preprocessor.h  balancer-processor.cpp  balancer-processor.h  cluster.cpp  cluster.h  node-placer.cpp  node-placer.h
src/app/family-tree/default-theme/: connector.h  family-connector.cpp  family-connector.h  person-item.cpp  person-item.h
src/app/main-window/: family-tree-view.cpp  family-tree-view.h  meson.build  mftbwindow.cpp  mftbwindow.h  mftbwindow.ui  person-editor-widget.cpp  person-editor-widget.h  person-view.cpp  tree-manager.cpp  tree-manager.h  zoom-on-scroll-graphics-view.h
src/app/mftb-window/: mftbwindow.cpp  mftbwindow.ui  zoom-on-scroll-graphics-view.cpp
src/app/mftb-window/tree-scene/: connector.cpp  family-connector.cpp  family-connector.h  family-connectors-db.cpp  family-connectors-db.h  family-tree-item.cpp  family-tree-item.h  individual-item.cpp  individual-item.h  tree-balancer.cpp  tree-balancer.h
src/app/renderer/: ancestors-node-placer.cpp  ancestors-node-placer.h  cluster.cpp  cluster.h  meson.build  node-placer.cpp  node-placer.h  render-preprocessor.cpp  render-preprocessor.h  renderer.cpp  renderer.h
src/cfg/: ColorManager.h  Config.cpp  Config.h  meson.build
src/core/: CMakeLists.txt  DB.cpp  DB.h  DBImpl.cpp  DBImpl.h  Family.cpp  Family.h  FamilyDB.cpp  FamilyDB.h  datamodel.h
src/core/data-model/: Event.h  Gender.cpp  Name.cpp  NameForm.cpp  NameForm.h  NamePart.cpp  Person.cpp  Person.h  Subject.cpp
src/core/gedcomx/: Gender.h  Name.h  NamePart.h  Person.h  README.md  Relationship.cpp  Relationship.h  Subject.h  core.h
src/ctrl/: family-tree-builder.cpp  family-tree-builder.h  meson.build  tree-manager.cpp  tree-manager.h
src/ctrl/renderer/: ancestors-node-placer.cpp  ancestors-node-placer.h  cluster.cpp  cluster.h  descendants-node-placer.cpp  descendants-node-placer.h  meson.build  render-preprocessor.cpp  render-preprocessor.h  renderer-flags.h  renderer.h  specs.txt
src/database/: CMakeLists.txt  DB.h  SqlDB.cpp  SqlDB.h  datamodel.h  meson.build  tree-traversal.h
src/model/: BiographiesModel.cpp  BiographiesModel.h  FamilyTreeModel.h  FamilyTreeSqlModel.cpp  FamilyTreeSqlModel.h  GedcomLoader.cpp  GedcomLoader.h  GedcomWriter.cpp  GedcomWriter.h  entities.h  meson.build  tree-traversal.h
src/view/: BiographiesView.cpp  BiographiesView.h  BiographiesView.ui  family-tree-graphics-view.cpp  family-tree-view.cpp  family-tree-view.h  lignum-window.cpp  lignum-window.h  lignum-window.ui  meson.build  symbology-style.db
src/view/ft/: abstract-family-connector.h  abstract-person-item.h  connector.cpp  meson.build  people-connector-builder.cpp  people-connector-builder.h  person-item.h  simple-connector.cpp  simple-connector.h  simple-family-connector.cpp  simple-family-connector.h  simple-person-item.cpp  simple-person-item.h
src/view/res/: CMakeLists.txt  meson.build  res.qrc
tests/: CMakeLists.txt  biographies-model-test.cpp  meson.build
tests/app/: family-tree-builder-tests.cpp  family-tree-walker-tests.cpp
tests/core/: basic_sql_test.cpp
tests/database/: basic_sql_test.cpp
