
main_window_src = ['main-window/family-tree-graphics-view.cpp',
'main-window/mftbwindow.cpp',
'main-window/person-editor-widget.cpp',
'main-window/tree-manager.cpp',]

main_window_src += qt6.compile_moc(headers : ['mftbwindow.h', 'person-editor-widget.h', 'family-tree-graphics-view.h'])
main_window_src += qt6.compile_ui(sources : 'mftbwindow.ui')

