
main_window_src = ['main-window/family-tree-graphics-view.cpp',
'main-window/lignum-window.cpp',
'main-window/person-view.cpp',
'main-window/tree-manager.cpp',]

main_window_src += qt6.compile_moc(headers : ['lignum-window.h', 'person-view.h', 'family-tree-graphics-view.h'])
main_window_src += qt6.compile_ui(sources : 'lignum-window.ui')

