family_tree_src = ['view/ft/people-connector-builder.cpp',]

impl_src = ['view/ft/impl/connector.cpp',
  'view/ft/impl/family-connector.cpp',
  'view/ft/impl/person-item.cpp']

family_tree_src += impl_src 

family_tree_src += qt6.compile_moc(headers : ['impl/person-item.h'])

family_tree_inc = include_directories('abstract')


