# family_tree_src = ['view/ft/people-connector-builder.cpp',
#                    'view/ft/simple-connector.cpp',
#                    'view/ft/simple-family-connector.cpp',
#                    'view/ft/simple-person-item.cpp']
#
family_tree_src = ['ft/people-connector-builder.cpp',
                   'ft/simple-connector.cpp',
                   'ft/simple-family-connector.cpp',
                   'ft/simple-person-item.cpp']

family_tree_src += qt6.compile_moc(headers : ['simple-person-item.h'])

family_tree_inc = [  include_directories('.') ] 


